Disabled prepublish hook. It screws us on Travis
And doesn't even work the way it was supposed to any more

--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   "main": "lib",
   "scripts": {
     "test": "vows",
-    "travis": "vows --spec",
-    "prepublish": "npm test"
+    "travis": "vows --spec"
   }
 }
