--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "coffee-script": "=1.2.0",
     "less": "=1.4.2",
     "iconv": "=2.0.3",
+    "svgo": "=0.4.4",
     "stylus": "=0.23.0",
     "yui-compressor": "=0.1.3",
     "vows": "=0.7.0"
