--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "stylus": "=0.23.0",
     "svgo": "=0.4.4",
     "unexpected": "=3.1.6",
-    "vows": "=0.7.0",
     "yui-compressor": "=0.1.3"
   },
   "engines": {
@@ -58,7 +57,7 @@
   },
   "main": "lib",
   "scripts": {
-    "test": "vows && mocha",
-    "travis": "vows --spec && mocha -R spec"
+    "test": "mocha",
+    "travis": "mocha -R spec"
   }
 }
