--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "closure-compiler": "=0.2.3",
     "coffee-script": "=1.2.0",
     "iconv": "=2.0.3",
+    "istanbul": "=0.2.10",
     "jshint": "=2.5.0",
     "less": "=1.4.2",
     "mocha": "=1.19.0",
@@ -61,5 +62,6 @@
   "scripts": {
     "test": "mocha",
     "travis": "mocha"
+    "coverage": "NODE_ENV=development ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --reporter dot"
   }
 }
