--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "request": "=2.9.153",
     "seq": "=0.3.5",
     "setimmediate": "^1.0.2",
-    "source-map": "=0.1.19",
+    "source-map": "=0.1.33",
     "uglify-js-papandreou": "=2.4.13-patch1",
     "uglifyast": "=0.3.1",
     "underscore": "=1.6.0",
@@ -61,7 +61,7 @@
   "main": "lib",
   "scripts": {
     "test": "mocha",
-    "travis": "mocha"
+    "travis": "mocha",
     "coverage": "NODE_ENV=development ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- --reporter dot"
   }
 }
